fix buttons on ios

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -173,6 +173,7 @@ $ub: 'Unbounded', sans-serif; //donate
   font-size: 16px;
   padding: 14px 30px;
   border: $border;
+  color: $text;
   border-radius: 16px;
   cursor: pointer;
   transition: transform 0.15s, box-shadow 0.15s, background 0.15s;
